# iroh-gossip-metrics

./: .gitignore  Cargo.toml
docs/presentations/: Reliability Testing of iroh-Gossip in Realistic Network Environments - first Results.pptx  Reliability Testing of iroh-Gossip in Realistic Network Environments.pptx
docs/report/: Projektbericht IPA 25-26 Andrea Seehuber.docx
docs/uc1-vs-uc2/: per_run_means.csv  uc1_vs_uc2_summary.csv
logs/: direct-recv.jsonl  direct-recv.stderr  direct-send.jsonl  gossip-recv.jsonl  gossip-recv.stderr  gossip-send.jsonl  relay-recv.jsonl  relay-recv.stderr  relay-send.jsonl  udp-recv.jsonl  udp-send.jsonl
logs/uc1-direct/: peer1-recv.jsonl  peer1-recv.stderr  peer1-summary.json  peer10-recv.jsonl  peer10-recv.stderr  peer10-summary.json  peer11-recv.jsonl  peer11-recv.stderr  peer11-summary.json  peer12-recv.jsonl  peer12-recv.stderr  peer12-summary.json  peer13-recv.jsonl  peer13-recv.stderr  peer13-summary.json  peer14-recv.jsonl  peer14-recv.stderr  peer14-summary.json  peer15-recv.jsonl  peer15-recv.stderr  peer15-summary.json  peer16-recv.jsonl  peer16-recv.stderr  peer16-summary.json  peer17-recv.jsonl  peer17-recv.stderr  peer17-summary.json  peer18-recv.jsonl  peer18-recv.stderr  peer18-summary.json  peer19-recv.jsonl  peer19-recv.stderr  peer19-summary.json  peer2-recv.jsonl  peer2-recv.stderr  peer2-summary.json  peer20-recv.jsonl  (+24 more)
scenarios/: netem-loss10.sh  netem-loss30-delay50.sh  netem-none.sh
scripts/: analyze.py  analyze_uc1_uc2.py  run_scenario.sh  run_usecase.sh
src/: main.rs  metrics.rs  transport.rs  util.rs
(+48227 files in other folders)
