[package]
name = "iroh-gossip-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
blake3 = "1.8.2"
bytes = "1.10.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
iroh = { version = "0.92.0", features = ["discovery-local-network"] }
iroh-gossip = "0.92.0"
postcard = "1.1.3"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
